# Mirage

./: Cargo.toml  README.md  config.toml  install.ps1  install.sh
src/: app.rs  audio.rs  config.rs  dsp.rs  main.rs  theme.rs
src/ui/: layout.rs  mod.rs  side_panel.rs
src/ui/widgets/: bars.rs  circle.rs  lissajous.rs  mod.rs  spectrogram.rs  vu_meter.rs  waveform.rs
